--- a/Week1/index.html
+++ b/Week1/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Hi, my name is David Muraoka</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="portrait" content="width=device-width, initial-scale=1">
 
         <!-- External link (relative) to your main stylesheet -->
         <link rel="stylesheet" href="css/screen.css">
@@ -14,8 +14,20 @@
         <script src="js/index.js"></script>
     </head>
     <body>
+    <h1> This is Me </h1>
         <!-- Add your site content here -->
         <!-- Relative URL image link example -->
         <img src="images/Portrait.jpg" alt="Portrait" />
+
+    <h1><a> Some stuff i like: </a></h1>
+    <ul>
+      <h2><li> Video Games </li></h2>
+    <h2> <li> Movies </li> </h2>
+    <h2> <li> Anime </li> </h2>
+   </ul>
+
+
+   <p>
+
     </body>
 </html>
