Some more changes

--- a/Week1/index.html
+++ b/Week1/index.html
@@ -14,7 +14,7 @@
         <script src="js/index.js"></script>
     </head>
     <body>
-    <h1> This is Me </h1>
+    <h1> Hello, here's a picture of me: </h1>
         <!-- Add your site content here -->
         <!-- Relative URL image link example -->
         <img src="images/Portrait.jpg" alt="Portrait" />
@@ -22,12 +22,27 @@
     <h1><a> Some stuff i like: </a></h1>
     <ul>
       <h2><li> Video Games </li></h2>
+      <ul>
+          <h3><li>Shadow of the colossus</h3></li>
+          <h3><li>Final Fantasy</h3></li>
+          <h3><li>Legend of Zelda</h3></li>
+      </ul>
     <h2> <li> Movies </li> </h2>
+      <ul>
+          <h3><li>Wolf Children<h3></li>
+          <h3><li>Lord of the Rings</h3></li>
+          <h3><li>Spirited Away</h3></li>
+     </ul>
     <h2> <li> Anime </li> </h2>
+    <ul>
+        <h3><li>Terror in Resonance</h3></li>
+        <h3><li>Code Geass</h3></li>
+    </ul>
    </ul>
 
 
-   <p>
-
+   <p><a> I decided to do a short list since i didn't know what else to put. </a></p>
+   <p><a> Heres a funny picture.</a></p>
+   <img src="images/Dam.jpg" alt="Dam" />
     </body>
 </html>
