Updated with Recipes

--- a/Week6/index.html
+++ b/Week6/index.html
@@ -18,31 +18,47 @@
       <div class="card">
         <img class="card--avatar" src="images/Eggs.jpg" alt="Eggs" width="75" height="75" />
         <h1 class="card--header">Gordon's Eggs Benedict</h1>
-        <p class="card--title">20 Minutes to cook, 4 servings</p>
+        <p class="card--title"><strong>Prep:</strong> 5 mins, <strong>Cook:</strong> 15 mins,<strong> Servings:</strong> 4</p>
+        <h2>Ingredients:</h2>
+        <p><strong>Meat:</strong> 4 Sices of Parma Ham</p>
+        <p><strong>Refrigerated:</strong> 4 Eggs</p>
+        <p><strong>Condiments:</strong> 1 batch of Hollandaise Sauce, Hot</p>
+        <p><strong>Oils & Vinegar:</strong> 3 tbsp of wine vinegar</p>
+        <p><strong>Bread & Baking Goods:</strong> 2 Toasting muffins</p>
+
         <ul class="card--social-links">
-          <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-github"></i></a></li>
+          <li><a href="https://www.youtube.com/watch?v=p1mGDiEbni4"><i class="fa fa-youtube"></i></a></li>
         </ul>
       </div>
       <div class="card">
-        <img class="card--avatar" src="images/Eggs.jpg" alt="Eggs" width="75" height="75" />
+        <img class="card--avatar" src="images/Tuna.jpg" alt="Tuna" width="75" height="75" />
         <h1 class="card--header">Spicy Tuna Fish Cakes</h1>
-        <p class="card--title">10 Minutes to cook, 8 servings</p>
+        <p class="card--title"><strong>Prep:</strong> 10 mins, <strong>Cook:</strong> 20 mins,<strong> Servings:</strong> 8</p>
+        <h2>Ingredients:</h2>
+        <p><strong>Seafood:</strong> 400g of Tinned Tuna</p>
+        <p><strong>Produce:</strong> 1 Red Chili, 5 tbsp Coriander, 1 3cm piece Ginger, 3 Kaffir Leaves, 1/2 Lime, 3 Spring Onions</p>
+        <p><strong>Reffrigerated:</strong> 2 Eggs</p>
+        <p><strong>Canned Goods:</strong> 6 Tinned water chestnuts</p>
+        <p><strong>Condiments:</strong> 8 tsp Thai Fish Sauce</p>
+        <p><strong>Baking & Spices:</strong> 1 Pinch of caster sugar, 1 Sea salt and grounded black pepper</p>
+        <p><strong>Oils & Vinegar:</strong> 1 tbsp Rice Vinegar, 1 vegetable oil</p>
         <ul class="card--social-links">
-          <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-github"></i></a></li>
+          <li><a href="https://www.youtube.com/watch?v=aGLpBWGKkZ0"><i class="fa fa-youtube"></i></a></li>
         </ul>
       </div>
       <div class="card">
-        <img class="card--avatar" src="images/Eggs.jpg" alt="Eggs" width="75" height="75" />
+        <img class="card--avatar" src="images/Sweetcorn.jpg" alt="Sweetcorn" width="75" height="75" />
         <h1 class="card--header">Sweetcorn Fritters with Yogurt Dip</h1>
-        <p class="card--title">15 Minutes to cook, 4 servings</p>
+        <p class="card--title"><strong>Prep:</strong> 5 mins, <strong>Cook:</strong> 10 mins,<strong> Servings:</strong> 8</p>
+        <h2>Ingredients:</h2>
+        <p><strong>Produce:</strong> 4 tbsp Coriander, 1 8-ounce can Corn kernels, 1/2 red chili, 2 Spring Onions, 1 Red Thai Chili</p>
+        <p><strong>Reffrigerated:</strong> 1 Eggs</p>
+        <p><strong>Baking & Spices:</strong> 3/4 cup All-purpose flour, 1/2 tsp Baking powder, 1 Sea salt and freshly grounded black pepper</p>
+        <p><strong>Oils & Vinegar:</strong> 1 vegetable olive oil</p>
+        <p><strong>Dairy:</strong> 1 cup Greek yogurt, 1/4 cup Whole milk</p>
+        <p><strong>Other:</strong> Juice & zest of 1/2 lime</p>
         <ul class="card--social-links">
-          <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-github"></i></a></li>
+          <li><a href="https://www.youtube.com/watch?v=XQQumV_qqs8"><i class="fa fa-youtube"></i></a></li>
         </ul>
       </div>
     </body>
