--- a/Final/index.html
+++ b/Final/index.html
@@ -2,43 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Cas 204 Final</title>
+<title>David Muraoka - Game Designe</title>
 <link href="final.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-<img src="Border.png" width="757" height="250" alt=""/>
 
-<h1>David Muraoka</h1>
-<h1>Game Designer</h1>
+<h1>David Muraoka</h1><h2>Game Designer</h2>
 
 <ul id="nav">
 	<li><a href="index.html">Home</a></li>
-	<li><a href="games.html">Games</a></li>
-	<li><a href="resume.html">Resume</a></li>
+	<li><a href="games.html">School Projects</a></li>
+	<li><a href="resume.html">Personal Projects</a></li>
+	<li><a href="resume.html">Resume, & Contacts</a></li>
 	<li><a href="https://muraokad.wordpress.com/">Blog</a></li>
 
 </ul>
 
-<img src="/images/Me.jpg" width="180" height="180">
+<img src="Me.jpg" width="180" height="180">
 
-<h3>Hello</h3>
+<h3>Hello!</h3>
 <p>I am a senior currently attending Michigan State University studying game design.</p>
-<p>I mainly focus on creating levels that provide both a </p>
 
-    <h3>Some other stuff:</h3>
- <p>Continuing on the theme of game design, I am currently making a game using the <a href="http://www.rpgmakerweb.com/">RPG Maker MV</a>  Engine. It is not a school assignment rather a personal project I wish to take on to being me one step closer to my dream. </p>
+    <h2>Personal Projects:</h2>
+		<h3>Aur Saga</h3><p>made with <a href="http://www.rpgmakerweb.com/products/programs/rpg-maker-vx-ace">RPG Maker VX Ace</a>.</p>
+		<b><img src="Aur.png" width="180" height="180"><img src="Aur.png" width="180" height="180"></b>
+	 <h3>Shrouded</h3><p>made with <a href="http://www.rpgmakerweb.com/products/programs/rpg-maker-mv">RPG Maker MV</a>.</p>
+	 <h3>One More Day</h3><p>made with <a href="https://twinery.org/">Twine</a>.</p>
 
-  <h1>Contact Infomation</h1>
-  		<ul>
-          <li> David Muraoka</li>
-          <li>Muraokad@msu.edu (please don't contact me...)</li>
+  <h2>School Projects</h2>
 
-</ul>
+	<h3>Aur Saga</h3><p>made with <a href="http://www.rpgmakerweb.com/products/programs/rpg-maker-vx-ace">RPG Maker VX Ace</a>.</p>
+ <h3>Shrouded</h3><p>made with <a href="http://www.rpgmakerweb.com/products/programs/rpg-maker-mv">RPG Maker MV</a>.</p>
+ <h3>One More Day</h3><p>made with <a href="https://twinery.org/">Twine</a>.</p>
 
-<div id="foot"><p>Copyright © 2016 David Muraoka. All rights reserved.
-Created for CAS 204: Web Design, part of the Media Sandbox at Michigan State University.<p><a href="http://class.cas.msu.edu/cas204/muraoka-david/final/Outline1CAS204.pdf">Original Outline Site</a></p></p>
 
-<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" /></a></div>
 </body>
 </html>
